@@ -1,6 +1,14 @@
+2023-08-31  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-completion-multi-hop-methods): Adapt docstring.
+	Use nil as initial value.
+
+	* tramp-container.el (tramp-completion-multi-hop-methods):
+	Add "docker" and "podman".
+
 2023-08-31  Gene Goykhman  <gene@indigo1.com>
 
-	* tramp.el: Add custom variable tramp-container-multi-hop-methods.
+	* tramp.el: Add custom variable `tramp-container-multi-hop-methods'.
 
 	* tramp-container.el: Check if METHOD is a member of
 	`tramp-container-multi-hop-methods' before attempting completion.
